# icuformat

./: .gitignore  Makefile.am  README.md  configure.ac  i18n.pc.in  icuformat  icuformat.cpp  test.sh
locales/: Makefile.am  root.txt
src/: Makefile.am  i18n.cpp  i18n.h  icuformat  icuformat.cpp  test  test.cpp
tests/: test.sh
tests/locales/: en.txt  root.txt
